--- a/tap-me/Base.lproj/Main.storyboard
+++ b/tap-me/Base.lproj/Main.storyboard
@@ -178,45 +178,43 @@
                         <viewControllerLayoutGuide type="top" id="Cby-oG-W9v"/>
                         <viewControllerLayoutGuide type="bottom" id="oln-Cu-88L"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="h4a-uk-bFA">
+                    <view key="view" contentMode="scaleToFill" id="h4a-uk-bFA" customClass="UIScrollView">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Hh5-94-5aW">
-                                <rect key="frame" x="0.0" y="20" width="155" height="181"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                            </imageView>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="First Name" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="UI6-EW-3kh">
-                                <rect key="frame" x="71" y="214" width="97" height="30"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="First Name" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="UI6-EW-3kh">
+                                <rect key="frame" x="71" y="209" width="97" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                                 <connections>
-                                    <action selector="textFieldReturn:" destination="kY6-Jz-pVZ" eventType="editingDidEndOnExit" id="M2F-tf-31s"/>
+                                    <action selector="textFieldDidBeginEditing:" destination="kY6-Jz-pVZ" eventType="editingDidBegin" id="iQu-4M-fu3"/>
+                                    <action selector="textFieldDidEndEditing:send:" destination="kY6-Jz-pVZ" eventType="editingDidEnd" id="okS-tw-V2z"/>
+                                    <action selector="textFieldReturn:" destination="kY6-Jz-pVZ" eventType="editingDidEndOnExit" id="Wtm-53-Ijk"/>
                                 </connections>
                             </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Username" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="uHV-3x-QwT">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="uHV-3x-QwT">
                                 <rect key="frame" x="71" y="260" width="97" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                                 <connections>
-                                    <action selector="usernameTextField:" destination="kY6-Jz-pVZ" eventType="editingDidEnd" id="OV7-kk-UxU"/>
+                                    <action selector="textFieldDidBeginEditing:" destination="kY6-Jz-pVZ" eventType="editingDidBegin" id="EAo-j8-aoO"/>
+                                    <action selector="textFieldDidEndEditing:send:" destination="kY6-Jz-pVZ" eventType="editingDidEnd" id="s55-X1-tGR"/>
+                                    <action selector="textFieldReturn:" destination="kY6-Jz-pVZ" eventType="editingDidEndOnExit" id="O3d-c7-xJa"/>
                                 </connections>
                             </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Password" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0w6-if-NrJ">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0w6-if-NrJ">
                                 <rect key="frame" x="71" y="309" width="97" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                                 <connections>
-                                    <action selector="passwordTextField:" destination="kY6-Jz-pVZ" eventType="editingDidEnd" id="axb-CL-YsQ"/>
+                                    <action selector="textFieldDidBeginEditing:" destination="kY6-Jz-pVZ" eventType="editingDidBegin" id="a6x-XC-vuG"/>
+                                    <action selector="textFieldDidEndEditing:send:" destination="kY6-Jz-pVZ" eventType="editingDidEnd" id="lzt-Oa-kK1"/>
+                                    <action selector="textFieldReturn:" destination="kY6-Jz-pVZ" eventType="editingDidEndOnExit" id="tZT-59-7kE"/>
                                 </connections>
                             </textField>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bxW-dy-E1b">
-                                <rect key="frame" x="163" y="20" width="165" height="181"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="T5m-yj-Z1q">
                                 <rect key="frame" x="84" y="371" width="125" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -224,7 +222,7 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="7jc-wm-vbq" kind="push" id="hZw-JX-dM5"/>
+                                    <segue destination="7jc-wm-vbq" kind="push" id="IMM-kk-4Uk"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7fO-bz-t3o">
@@ -242,10 +240,8 @@
                     </view>
                     <navigationItem key="navigationItem" id="0AL-oV-4gN"/>
                     <connections>
-                        <outlet property="finalImageView" destination="bxW-dy-E1b" id="DQC-2s-azL"/>
-                        <outlet property="firstNameTextField" destination="UI6-EW-3kh" id="4OC-aw-pBJ"/>
+                        <outlet property="firstnameTextField" destination="UI6-EW-3kh" id="Pgi-bc-8eb"/>
                         <outlet property="passwordTextField" destination="0w6-if-NrJ" id="bAh-T0-Eb9"/>
-                        <outlet property="placeholderImageView" destination="Hh5-94-5aW" id="jS8-Bm-xFy"/>
                         <outlet property="usernameTextField" destination="uHV-3x-QwT" id="li5-qv-4qt"/>
                     </connections>
                 </viewController>
@@ -339,7 +335,6 @@
                     </view>
                     <navigationItem key="navigationItem" id="lxk-gj-ix3"/>
                     <connections>
-                        <outlet property="newGameButton" destination="74b-6z-9Fb" id="dFh-kh-iWR"/>
                         <outlet property="welcomeTextField" destination="wkP-rl-71o" id="b87-P8-A7F"/>
                     </connections>
                 </viewController>
@@ -360,8 +355,8 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="b7s-hf-Fhb"/>
-        <segue reference="sCL-RI-OE2"/>
-        <segue reference="fxa-BA-avl"/>
+        <segue reference="N5n-JC-j80"/>
+        <segue reference="IQ0-y5-Q6V"/>
+        <segue reference="IMM-kk-4Uk"/>
     </inferredMetricsTieBreakers>
 </document>
